--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
 
     <string name="app_name">Travel_Smart</string>
+    
+    <string name="network_wifi_connected">Wi-Fi is available</string>
+    <string name="network_mobile_connected">mobile is available</string>
+    <string name="network_disconnected">network is unavailable</string>
+    
+    
 
 </resources>
