--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="cancel_button">Cancel</string>
     <string name="agree_button">Agree</string>
     <string name="disagree_button">disagree</string>
+    <string name="settings_title_name">Settings</string>
     
     
     
